# hass-timescaledb-exporter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
custom_components/timescaledb_exporter/: __init__.py  config_flow.py  const.py  diagnostics.py  listener.py  manifest.json  sensor.py  strings.json
custom_components/timescaledb_exporter/db/: __init__.py  policies.py  writer.py
custom_components/timescaledb_exporter/db/migrations/: manager.py
custom_components/timescaledb_exporter/db/migrations/versions/: V001__create_extensions.sql  V002__create_hypertables.sql  V003__create_indexes.sql  V004__enable_compression.sql  V005__create_continuous_aggregates.sql  V006__create_retention_policies.sql  V007__enable_aggregate_compression.sql
custom_components/timescaledb_exporter/translations/: en.json
grafana/: dashboard.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py  test_listener.py  test_migrations.py  test_policies.py  test_sensor.py  test_writer.py
tests/integration/: __init__.py  conftest.py  test_db_integration.py
