[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hass-timescaledb-exporter"
version = "0.1.1"
description = "Home Assistant custom integration to export state changes to TimescaleDB for long-term storage"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "asyncpg==0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-homeassistant-custom-component>=0.13.150,<0.14",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.8.0",
    "mypy>=1.14",
    "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-rxf -l --cov=custom_components/timescaledb_exporter --cov-report=term-missing -vv"
filterwarnings = [
    "ignore::DeprecationWarning",
]
norecursedirs = [".git", "deps"]
markers = [
    "integration: marks tests that require a real TimescaleDB instance (deselect with '-m \"not integration\"')",
]

[tool.ruff]
fix = true
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["custom_components.timescaledb_exporter"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
warn_return_any = true
warn_unused_configs = true
